# scrapegis

./: Makefile  README.md  scrapegis.cabal
src/: Main.hs  Scrapegis.hs  Usage.txt
src/Scrapegis/: Export.hs  Hennepin.hs  Internal.hs  Query.hs  Settings.hs  Types.hs  Utils.hs
test/: ScrapegisSpec.hs
test/Scrapegis/: ExportSpec.hs
test_data/: object_ids.json  test_attributes.json  test_chunk.json  two_json.json
