Name:                   scrapegis
Version:                0.0.0
Author:                 Ryan Johnson <ryan.txanson@gmail.com>
Maintainer:             Ryan Johnson <ryan.txanson@gmail.com>
License:                BSD3
License-File:           LICENSE
-- Synopsis:               
-- Description:            
Cabal-Version:          >= 1.20
Build-Type:             Simple
Data-Files:
    src/Usage.txt


Library
  Hs-source-dirs:      src
  Build-depends:       base >= 4 && < 5
                     , lens 
                     , aeson
                     , wreq
                     , docopt
                     , cassava
                     , bytestring
                     , containers
                     , text
                     , transformers
                     , vector

  Exposed-modules:     Scrapegis
                     , Scrapegis.Query
                     , Scrapegis.Export
                     , Scrapegis.Types
  Default-Language:     Haskell2010

Executable scrapegis
  main-is:          Main.hs
  ghc-options:
      -Wall
  hs-source-dirs:      src
  Build-depends:       base >= 4 && < 5
                     , lens 
                     , aeson
                     , wreq
                     , docopt
                     , cassava
                     , bytestring
                     , containers
                     , text
                     , vector
  default-language: Haskell2010

-- TODO: docopt isn't yet in cabal, how to include this in build depends?

Test-Suite scrapegis-test
  Type:                 exitcode-stdio-1.0
  Hs-Source-Dirs:       test, src
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , scrapegis
                      , hspec
                      , lens 
                      , aeson
                      , wreq
                      , docopt
                      , cassava
                      , bytestring
                      , containers
                      , text
                      , vector
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  Default-Language:     Haskell2010

Source-Repository head
  Type:                 git
  Location:             https://bitbucket.org/rtxanson/scrapegis.git
